<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/nanchang"
            android:gravity="center"/>
        <Spinner
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/books"
            android:prompt="@string/tip1" />
        <Spinner
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/professionals"
            android:prompt="@string/tip2"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>