<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/blue">
            <ImageView
                android:id="@+id/photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/photo"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="130dp"/>
            <EditText
                android:layout_below="@id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/my_name"
                android:layout_marginLeft="145dp"/>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/collection_fill"
                    android:background="@color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/fra_fif_collect"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/collect"
                    android:textSize="18sp"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/authentication"
                    android:background="@color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/fra_fif_auth"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/authentication"
                    android:textSize="18sp"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/release"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"/>
                <TextView
                    android:id="@+id/fra_fif_release"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/issue"
                    android:textSize="18sp"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/apply"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"/>
                <TextView
                    android:id="@+id/fra_fif_apply"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/apply"
                    android:textSize="18sp"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/usehelp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"/>
                <TextView
                    android:id="@+id/fra_fif_help"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/use_help"
                    android:textSize="18sp"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/aboutus"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"/>
                <TextView
                    android:id="@+id/fra_fif_about"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/about_us"
                    android:textSize="18sp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>